kérek egy 4-est

--- a/got-project/index.html
+++ b/got-project/index.html
@@ -13,16 +13,23 @@
   </head>
   <body>
     <div class="container__main">
-      <div class="container__pictures">sdfa dfadf adf eaw fda e</div>
+      <div class="container__pictures"></div>
       <div class="container__info">
         <div class="title">Game Of Thrones</div>
-        <div class="infos">itt egy kép lesz, meg egy rakat szöveg</div>
+        <div class="infos">
+          <img class="charImage" src="" alt="" />
+          <div class="name__badge">
+            <div class="bioname"></div>
+            <img class="badge" src="" alt="" />
+          </div>
+          <div class="bio"></div>
+        </div>
         <div class="input__container">
-          <button class="open"><i class="fa fa-chevron-right"></i></button>
-          <button class="search"><i class="fa fa-search"></i></button>
+          <div class="notfound"></div>
+          <button class="search"><i class="fa fa-chevron-right"></i></button>
           <input
             class="input__field"
-            type="text"
+            type="search"
             placeholder="Search a character"
           />
         </div>
